fix 1165